feat: fix script loading

--- a/web/link.html
+++ b/web/link.html
@@ -552,14 +552,13 @@
             <p class="text-sm text-purple-300 mb-4">Your donation helps keep our services running</p>
             
             <div class="p-2 bg-white rounded-lg inline-block">
-                <img src="https://raw.githubusercontent.com/eikarna/SirenWeb/refs/heads/master/web/qris.png" alt="Donation QR Code" class="w-48 h-48">
+                <img src="images/qris.png" alt="Donation QR Code" class="w-48 h-48">
             </div>
             
             <p class="text-xs text-gray-500 mt-3">Scan this QR code with your payment app to donate</p>
         </div>
     </div>
     <!-- External JavaScript -->
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
 
     <!-- Custom JavaScript -->
