feat: restructure WebUI and fix script codes

--- a/converter.html
+++ b/converter.html
@@ -131,7 +131,7 @@
                 </div>	
 				<br>
                 <br>
-                <a href="index.html" class="w-full p-3 rounded-lg text-center flex items-center justify-center gap-2 font-semibold text-lg bg-gradient-to-r from-purple-600 to-blue-500 text-white transition-all duration-300 ease-in-out hover:shadow-lg hover:shadow-purple-500/50 hover:-translate-y-0.5 mt-4">
+                <a href="/" class="w-full p-3 rounded-lg text-center flex items-center justify-center gap-2 font-semibold text-lg bg-gradient-to-r from-purple-600 to-blue-500 text-white transition-all duration-300 ease-in-out hover:shadow-lg hover:shadow-purple-500/50 hover:-translate-y-0.5 mt-4">
                     <i data-lucide="home" class="w-5 h-5"></i> Home
                 </a>
 
